- Code Smells: WEM and Search